--- a/src/main/resources/templates/user/sign-up.html
+++ b/src/main/resources/templates/user/sign-up.html
@@ -30,6 +30,11 @@
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
+                            <label class="form-label">Số điện thoại</label>
+                            <input required="true" type="text" class="form-control" name="phone" placeholder="VD: 0355558195" value="">
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group">
                             <label class="form-label">Email</label>
                             <input required="true" type="email" class="form-control" name="email" placeholder="VD: nguyena@gmail.com" value="">
                             <span class="form-message"></span>
