--- a/src/main/resources/templates/admin/layout/header.html
+++ b/src/main/resources/templates/admin/layout/header.html
@@ -35,7 +35,7 @@
                     <span>Admin</span><i class="fa fa-angle-down"></i></a>
                 <ul class="dropdown-menu">
                     <a class="dropdown-item" href=""><i class="fa fa-user"></i>Profile</a>
-                    <a class="dropdown-item" href=""><i class="fa fa-cog"></i>Settings</a>
+                    <a class="dropdown-item" href=""><i class="fa fa-cog"></i>Setting</a>
                     <a class="dropdown-item" href=""><i class="fa fa-support"></i>Support</a>
 <!--                    <li class="dropdown-divider"></li>-->
                     <a class="dropdown-item" th:href="@{/logout}"><i class="fa fa-power-off"></i>Logout</a>
