--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -41,11 +41,11 @@
 <!--        <a class="menu-link" href="javascript:;"><i class="sidebar-item-icon fa fa-bar-chart"></i>-->
 <!--          <span class="nav-label">Statistics</span><i class="fa fa-angle-left arrow"></i></a>-->
 <!--      </li>-->
-      <li>
-        <a class="menu-link" href="icons.html"><i class="sidebar-item-icon fa fa-comments-o"></i>
-          <span class="nav-label">Feedbacks</span>
-        </a>
-      </li>
+<!--      <li>-->
+<!--        <a class="menu-link" href="icons.html"><i class="sidebar-item-icon fa fa-comments-o"></i>-->
+<!--          <span class="nav-label">Feedbacks</span>-->
+<!--        </a>-->
+<!--      </li>-->
     </ul>
   </div>
 </nav>
